# drf_ecommerce

./: Makefile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
apps/: urls.py
apps/products/: filters.py  models.py  serializer.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py
apps/users/: urls.py  views.py
root/: settings.py  urls.py
